# starlink-telemetry

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: setup_protos.py
starlink_telemetry/: __init__.py  cli.py  client.py
starlink_telemetry/proto/: __init__.py
